CourseProgress: Username wrap and tooltip (fixes #1523) (#1538)

--- a/src/app/courses/progress-courses/courses-progress-leader.scss
+++ b/src/app/courses/progress-courses/courses-progress-leader.scss
@@ -54,4 +54,14 @@
     z-index: 10;
   }
 
+  .wrap-content {
+    min-width: 0;
+  }
+
+  .wrap-content p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
 }
